update start script jvm args